fix general document structure #02

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     </div>
     <div class="content-wrapper">
       <section class="about-frame"><img src="assets/images/photo-camera.png" alt="Camera Picture" class="photo">
-        <h2 class="title"><span class="lighttext">$#8212; My name is</span> Apollo</h2>
+        <h2 class="title"><span class="lighttext">&#8212; My name is</span> Apollo</h2>
         <p class="description">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
           eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
