fix photo stairs link and add jquery and bootstrap carousel

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="robots" content="index, follow">
     <meta name="author" content="Luan Vicente">
     <meta name="description" content="Apollo - Photographer UI Design">
+    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
     <title>Apollo</title>
   </head>
   <body>
@@ -78,7 +79,7 @@
           reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
           pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
           culpa qui officia deserunt mollit anim id est laborum.
-        </p><img src="assets/images/photo-stairs.png" alt="Stairs Photo" class="photo">
+        </p><img src="assets/images/photo-stairs.jpg" alt="Stairs Photo" class="photo">
       </section>
     </div>
     
@@ -98,5 +99,7 @@
         </form>
       </section>
     </div>
+    <script src="http://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
   </body>
 </html>
