--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="robots" content="index, follow">
     <meta name="author" content="Luan Vicente">
     <meta name="description" content="Apollo - Photographer UI Design">
-    <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <title>Apollo</title>
   </head>
   <body>
@@ -67,7 +67,17 @@
         </ul>
       </section>
     </div>
-    
+    <div class="content-wrapper">
+      <section class="largeslideshow-frame">
+        <div id="carousel-example-generic" data-ride="carousel" class="carousel slide">
+          <ol class="carousel-indicators"></ol>
+          <div role="listbox" class="carousel-inner">
+            <div class="item active"><img src="assets/images/photo-girl-camera.jpg" alt=""></div>
+            <div class="item"><img src="assets/images/photo-girl-bike.jpg" alt="..."></div>
+          </div><a href="#carousel-example-generic" role="button" data-slide="prev" class="left carousel-control"></a><a href="#carousel-example-generic" role="button" data-slide="next" class="right carousel-control"></a>
+        </div>
+      </section>
+    </div>
     <div class="content-wrapper">
       <section class="photography-frame">
         <h2 class="title">Ut enim<span class="lighttext"> ad minim</span></h2>
@@ -99,7 +109,7 @@
         </form>
       </section>
     </div>
-    <script src="http://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
-    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="http://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </body>
 </html>
