--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
         <div id="carousel-example-generic" data-ride="carousel" class="carousel slide">
           <ol class="carousel-indicators"></ol>
           <div role="listbox" class="carousel-inner">
-            <div class="item active"><img src="assets/images/photo-girl-camera.jpg" alt=""></div>
-            <div class="item"><img src="assets/images/photo-girl-bike.jpg" alt="..."></div>
+            <div class="item active"><img src="assets/images/photo-girl-camera.jpg" alt="Picture of Photographer"></div>
+            <div class="item"><img src="assets/images/photo-girl-camera-2.jpg" alt="Picture of Photographer"></div>
           </div><a href="#carousel-example-generic" role="button" data-slide="prev" class="left carousel-control"></a><a href="#carousel-example-generic" role="button" data-slide="next" class="right carousel-control"></a>
         </div>
       </section>
