id large carousel updated and add small slideshow

--- a/index.html
+++ b/index.html
@@ -69,12 +69,12 @@
     </div>
     <div class="content-wrapper">
       <section class="largeslideshow-frame">
-        <div id="carousel-example-generic" data-ride="carousel" class="carousel slide">
+        <div id="large-slideshow" data-ride="carousel" class="carousel slide">
           <ol class="carousel-indicators"></ol>
           <div role="listbox" class="carousel-inner">
             <div class="item active"><img src="assets/images/photo-girl-camera.jpg" alt="Picture of Photographer"></div>
             <div class="item"><img src="assets/images/photo-girl-camera-2.jpg" alt="Picture of Photographer"></div>
-          </div><a href="#carousel-example-generic" role="button" data-slide="prev" class="left carousel-control"></a><a href="#carousel-example-generic" role="button" data-slide="next" class="right carousel-control"></a>
+          </div><a href="#large-slideshow" role="button" data-slide="prev" class="left carousel-control"></a><a href="#large-slideshow" role="button" data-slide="next" class="right carousel-control"></a>
         </div>
       </section>
     </div>
@@ -92,7 +92,18 @@
         </p><img src="assets/images/photo-stairs.jpg" alt="Stairs Photo" class="photo">
       </section>
     </div>
-    
+    <div class="content-wrapper">
+      <section class="smallslideshow-frame">
+        <div id="small-slideshow" data-ride="carousel" class="carousel slide">
+          <ol class="carousel-indicators"></ol>
+          <div role="listbox" class="carousel-inner">
+            <div class="item"><img src="assets/images/photo-city-bridge.jpg" alt="Picture of Photographer"></div>
+            <div class="item active"><img src="assets/images/photo-girl-bike.jpg" alt="Picture of Photographer"></div>
+            <div class="item"><img src="assets/images/photo-way.jpg" alt="Picture of Photographer"></div>
+          </div><a href="#small-slideshow" role="button" data-slide="prev" class="left carousel-control"></a><a href="#small-slideshow" role="button" data-slide="next" class="right carousel-control"></a>
+        </div>
+      </section>
+    </div>
     <div class="content-wrapper">
       <section class="contact-frame">
         <h2 class="title">Say<span class="lighttext"> Hello</span></h2>
