ids assigned for each frame and link to main navigation

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
           <nav class="main-navigation">
             <h2 class="title">Main Navigation</h2>
             <ul class="menu-list">
-              <li class="menu"><a href="#" class="link">Home</a></li>
-              <li class="menu"><a href="#" class="link">About</a></li>
-              <li class="menu"><a href="#" class="link">Large Slideshow</a></li>
-              <li class="menu"><a href="#" class="link">Photos</a></li>
-              <li class="menu"><a href="#" class="link">Small Slideshow</a></li>
-              <li class="menu"><a href="#" class="link">Contact</a></li>
+              <li class="menu"><a href="#home" class="link">Home</a></li>
+              <li class="menu"><a href="#about" class="link">About</a></li>
+              <li class="menu"><a href="#largeslideshow" class="link">Large Slideshow</a></li>
+              <li class="menu"><a href="#photos" class="link">Photos</a></li>
+              <li class="menu"><a href="#smallslideshow" class="link">Small Slideshow</a></li>
+              <li class="menu"><a href="#contact" class="link">Contact</a></li>
             </ul>
           </nav>
           <footer class="main-footer">
@@ -36,7 +36,7 @@
       </header>
     </div>
     <div class="content-wrapper">
-      <section class="main-frame">
+      <section id="home" class="main-frame">
         <h2 class="title">Apollo<span class="lighttext"> Photographer UI Design</span></h2>
         <p class="description">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit,
@@ -48,7 +48,7 @@
       </section>
     </div>
     <div class="content-wrapper">
-      <section class="about-frame"><img src="assets/images/photo-camera.png" alt="Camera Picture" class="photo">
+      <section id="about" class="about-frame"><img src="assets/images/photo-camera.png" alt="Camera Picture" class="photo">
         <h2 class="title"><span class="lighttext">&#8212; My name is</span> Apollo</h2>
         <p class="description">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -68,7 +68,7 @@
       </section>
     </div>
     <div class="content-wrapper">
-      <section class="largeslideshow-frame">
+      <section id="largeslideshow" class="largeslideshow-frame">
         <div id="large-slideshow" data-ride="carousel" class="carousel slide">
           <ol class="carousel-indicators"></ol>
           <div role="listbox" class="carousel-inner">
@@ -79,7 +79,7 @@
       </section>
     </div>
     <div class="content-wrapper">
-      <section class="photography-frame">
+      <section id="photos" class="photography-frame">
         <h2 class="title">Ut enim<span class="lighttext"> ad minim</span></h2>
         <p class="description">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
@@ -93,7 +93,7 @@
       </section>
     </div>
     <div class="content-wrapper">
-      <section class="smallslideshow-frame">
+      <section id="smallslideshow" class="smallslideshow-frame">
         <div id="small-slideshow" data-ride="carousel" class="carousel slide">
           <ol class="carousel-indicators"></ol>
           <div role="listbox" class="carousel-inner">
@@ -105,7 +105,7 @@
       </section>
     </div>
     <div class="content-wrapper">
-      <section class="contact-frame">
+      <section id="contact" class="contact-frame">
         <h2 class="title">Say<span class="lighttext"> Hello</span></h2>
         <p class="description">
           Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
