add stylesheets into jade template

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Luan Vicente">
     <meta name="description" content="Apollo - Photographer UI Design">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/main.css">
     <title>Apollo</title>
   </head>
   <body>
