--- a/index.html
+++ b/index.html
@@ -35,37 +35,39 @@
           </footer>
         </div>
       </header>
-    </div>
-    <div class="content-wrapper">
       <section id="home" class="main-frame">
-        <h2 class="title">Apollo<span class="lighttext"> Photographer UI Design</span></h2>
-        <p class="description">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-          sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
-          enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-          ut aliquip ex ea commodo consequat. Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore.
-        </p><img src="assets/images/photo-back.png" alt="John Apollo Picture" class="photo">
+        <div class="text-box">
+          <h2 class="title">Apollo<span class="lighttext"> Photographer UI Design</span></h2>
+          <p class="description">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit,
+            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut
+            enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+            ut aliquip ex ea commodo consequat. Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore.
+          </p>
+        </div><img src="assets/images/photo-back.png" alt="John Apollo Picture" class="photo">
       </section>
     </div>
     <div class="content-wrapper">
       <section id="about" class="about-frame"><img src="assets/images/photo-camera.png" alt="Camera Picture" class="photo">
-        <h2 class="title"><span class="lighttext">&#8212; My name is</span> Apollo</h2>
-        <p class="description">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.  Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
-        </p>
-        <ul class="social-list">
-          <li class="social facebook"><a href="#" class="link">Facebook</a></li>
-          <li class="social instagram"><a href="#" class="link">Instagram</a></li>
-          <li class="social twitter"><a href="#" class="link">Twitter</a></li>
-          <li class="social pinterest"><a href="#" class="link">Pinterest</a></li>
-        </ul>
+        <div class="text-box">
+          <h2 class="title"><span class="lighttext">&#8212; My name is</span> Apollo</h2>
+          <p class="description">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+            minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.  Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+          <ul class="social-list">
+            <li class="social facebook"><a href="#" class="link">Facebook</a></li>
+            <li class="social instagram"><a href="#" class="link">Instagram</a></li>
+            <li class="social twitter"><a href="#" class="link">Twitter</a></li>
+            <li class="social pinterest"><a href="#" class="link">Pinterest</a></li>
+          </ul>
+        </div>
       </section>
     </div>
     <div class="content-wrapper">
@@ -81,16 +83,18 @@
     </div>
     <div class="content-wrapper">
       <section id="photos" class="photography-frame">
-        <h2 class="title">Ut enim<span class="lighttext"> ad minim</span></h2>
-        <p class="description">
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-          eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
-          minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat.  Duis aute irure dolor in
-          reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-          pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-          culpa qui officia deserunt mollit anim id est laborum.
-        </p><img src="assets/images/photo-stairs.jpg" alt="Stairs Photo" class="photo">
+        <div class="text-box">
+          <h2 class="title">Ut enim<span class="lighttext"> ad minim</span></h2>
+          <p class="description">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad
+            minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.  Duis aute irure dolor in
+            reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+            pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
+            culpa qui officia deserunt mollit anim id est laborum.
+          </p>
+        </div><img src="assets/images/photo-stairs.jpg" alt="Stairs Photo" class="photo">
       </section>
     </div>
     <div class="content-wrapper">
