--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           <div role="listbox" class="carousel-inner">
             <div class="item active"><img src="assets/images/photo-girl-camera.jpg" alt="Picture of Photographer"></div>
             <div class="item"><img src="assets/images/photo-man-camera.jpg" alt="Picture of Photographer"></div>
-          </div><a href="#large-slideshow" role="button" data-slide="prev" class="left carousel-control"></a><a href="#large-slideshow" role="button" data-slide="next" class="right carousel-control"></a>
+          </div><a href="#large-slideshow" role="button" data-slide="prev" class="left carousel-control"><span class="back"></span></a><a href="#large-slideshow" role="button" data-slide="next" class="right carousel-control"><span class="next"></span></a>
         </div>
       </section>
     </div>
@@ -105,7 +105,7 @@
             <div class="item"><img src="assets/images/photo-city-bridge.jpg" alt="Picture of Photographer"></div>
             <div class="item active"><img src="assets/images/photo-girl-bike.jpg" alt="Picture of Photographer"></div>
             <div class="item"><img src="assets/images/photo-way.jpg" alt="Picture of Photographer"></div>
-          </div><a href="#small-slideshow" role="button" data-slide="prev" class="left carousel-control"></a><a href="#small-slideshow" role="button" data-slide="next" class="right carousel-control"></a>
+          </div><a href="#small-slideshow" role="button" data-slide="prev" class="left carousel-control"><span class="back"></span></a><a href="#small-slideshow" role="button" data-slide="next" class="right carousel-control"><span class="next"></span></a>
         </div>
       </section>
     </div>
@@ -121,7 +121,7 @@
           <input type="email" placeholder="Your Email" class="field basic">
           <input type="text" placeholder="Subject" class="field basic">
           <textarea rows="10" cols="30" class="field message"></textarea>
-          <input type="submit" value="Send Message" role="button" class="send">
+          <input type="submit" value="Send Message" role="button" class="button">
         </form>
       </section>
     </div>
