--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         <form class="contact-form">
           <input type="email" placeholder="Your Email" class="field basic">
           <input type="text" placeholder="Subject" class="field basic">
-          <textarea rows="10" cols="30" class="field message"></textarea>
+          <textarea rows="10" cols="30" placeholder="Message" class="field message"></textarea>
           <input type="submit" value="Send Message" role="button" class="button">
         </form>
       </div>
