main header and menu

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <section id="home" class="frame main-frame">
       <header class="main-header">
         <div class="toggle-menu">
-          <h3 class="title">Menu</h3><span class="togglebutton">Open</span>
+          <h3 class="title">Menu</h3><span class="togglebutton"></span>
         </div>
-        <div class="header-content">
+        <div class="header-content"><span class="togglebutton"></span>
           <h1 class="title">Apollo</h1>
           <nav class="main-navigation">
             <h2 class="title">Main Navigation</h2>
