--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         </div>
       </section>
     </div>
-    <script src="http://code.jquery.com/jquery-3.1.1.min.js"></script>
+    <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/main.js"></script>
   </body>
